tests/should_fail/test_simple_method.zen
// Simple test to debug method call parsing
{ io , get_default_allocator} = @std

main = () void {
    alloc = get_default_allocator()
    io.println("Testing method call")
    obj = 42
    obj.somemethod()
    io.println("Done")
}